--- a/src/app/components/Documentos/DRetenciones/DRetenciones.component.html
+++ b/src/app/components/Documentos/DRetenciones/DRetenciones.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <!--Primer panel Emisor-->
   <div class="panel panel-primary">
     <div class="panel-heading" id="panels">Emisor</div>
@@ -71,8 +71,7 @@
                               <font size="1">Fecha:</font>     
                           </div>
                           <div class="col-lg-7 form-group">
-                              <input name="fechReten" 
-                              type="text" class="form-control" placeholder="Número registro de identidad fiscal">
+                                <input type="text" id="fecha7" name="fecha7" class="form-control">
                           </div>                   
                       </div>
 
@@ -95,7 +94,6 @@
 
                       <div class="col-lg-4 form-group">     
                           <div class="col-lg-5">    
-                                  
                           </div>
                           <div class="col-lg-7 form-group">
                             <font size="1"><input type="checkbox" value="">Ver información de emisor</font>
