--- a/src/app/components/Registros/RCFDI33/Rcfdi33.component.html
+++ b/src/app/components/Registros/RCFDI33/Rcfdi33.component.html
@@ -1,5 +1,5 @@
 <!--primer panel-->
-<div class="container-fluid">
+<div class="container">
 <div class="panel panel-primary">
 <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
      <div class="panel-body">
@@ -9,6 +9,7 @@
             <div class="row">
              <div>
             <input name="emisor" type="radio" value=""><label> Agragar emisor</label> 
+            &nbsp;
             <input type="radio" name="cfdi" value=""><label>Folio de CFDI</label>
             </div>
             
@@ -18,7 +19,7 @@
                 </div>
                 
 
-                <div class="form-group col-lg-4">
+                <div class="form-group">
                 <div class="col-lg-6">
                     <font>Buscar por RFC/Cliente/Razon social
                     </font>
@@ -30,33 +31,31 @@
                 </div>
 
 
-                <div>
-                <div>
+                <div class="form-group">
+                <div class="col-lg-5">
                     <font> RFC
                     </font>
                 </div>    
-                <div>
+                <div class="col-sm-7">
                     <input type="text" name="patron" class="form-control" id="patron" placeholder="AAWW890512MVZAVE6"> 
                 </div>
                 </div>
 
 
-                <div class="row">
-                <div>
-                <div>
+                <div class="form-group">
+                <div class="col-lg-5">
                     <font>
                         Cliente 
                     </font>
                 </div>     
-                <div>
+                <div class="col-sm-7">
                     <input type="text" name="cli" class="form-control" id="cliente" placeholder="0042 0042-MUICIPIO DE ATLAHUILCO">
                 </div>               
                 </div>
 
                 <div>
                     <button class="btn btn-success" type="button" value="">Buscar</button>
-                </div>
-                </div>                       
+                </div>                      
         </form>
 
         <form>
@@ -176,9 +175,6 @@
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
 
 
             <div class="b" id="bo">
@@ -213,9 +209,6 @@
 
             </div>
                 
-            &nbsp;
-            &nbsp;
-            &nbsp;
             &nbsp;
             &nbsp;
             &nbsp;
@@ -346,7 +339,7 @@
 
         <br>
 
-        <table style="background-color: #006666" id="NSER" class="table table-responsive">
+        <table id="NSER" class="table table-responsive">
             <tr>
                 <th>NO SE ENCONTRARON REGISTROS</th>
             </tr>
