--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid"> 
-
+<div class="container"> 
+<!--Primer panel Buscar productos-->
   <div class="panel panel-primary">
    <div class="panel-heading" id="panels">Buscar productos</div>
     <div class="panel-body">
@@ -11,7 +11,7 @@
       <button type="button" class="btn btn-success">Buscar Producto</button>
     </div>
   </div>
-
+<!--Segundo panel Productos-->
  <div class="panel panel-primary">
   <div class="panel-heading" id="panels">Productos</div>
   <div class="panel-body">
