--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<div class="container-fluid">
-<nav class="navbar navbar-icon-top navbar-expand-lg" style="background-color: #336666" role="navigation">
-<div class="navbar-header">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #85929E">
+<!--<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light" style="background:#336666" type="navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  </div>
 
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
@@ -62,4 +60,98 @@
 
       </div>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet>-->
+
+<link href="/components/principal/principal.components.html">
+
+<div class="container">
+
+  <div class="container sinpadding">
+  <div class="row">
+        <div>
+            <img src="https://dl.dropboxusercontent.com/s/sp10cskms62vew9/Captura%20de%20pantalla%20de%202018-10-01%2016-51-01.png?dl=0" 
+            class="img-responsive img-thumbnail" id="image">
+          </div>
+
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <form class="form-signin">
+                <div class="form-label-group">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                </div>
+  
+                <div class="form-label-group">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                </div>
+  
+                <div class="custom-control custom-checkbox mb-3">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">Remember password</label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                <a routerLink="principal" action="principal.components.html">entrar</a>
+                <hr class="my-4">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+  
+      <div>
+      <div class="col-lg-12">
+        <div class="row">
+          <div class="col-lg-1">
+          </div>
+  
+          <div class="col-lg-10">
+             <img src="https://www.siigo.com/wp-content/uploads/2018/02/Facturaci%C3%B3n-electronica-DIAN.jpg"
+             class="img-responsive img-thumbnail">
+          </div>
+
+          <div class="col-lg-1">
+  
+          </div>
+        </div>
+      </div>
+      </div>
+  
+      <footer>
+        <div class="col-lg-12">
+          <div class="row">
+           <div class="col-lg-1 col-md-1 col-sm-1">
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">Inicio</a> <p>
+              <i class="fas fa-external-link-alt r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">¿Quienes somos?</a> <p>
+              <i class="fas fa-desktop r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-8" id="icon">
+             <a routerLink="" class="i">Nosotros</a> <p>
+              <i class="fas fa-briefcase r" ></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">Servicios</a> <p>
+              <i class="fas fa-copy r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-lg-2 col-sm-2 col-xs-4" id="icon">
+             <a routerLink="" class="i">Contacto</a> <p>
+              <i class="far fa-address-book r"></i>
+           </div>
+  
+           <div class="col-lg-1 col-md-1 col-sm-1">
+           </div>
+          </div>
+        </div>
+      </footer>
+  </div>
