--- a/src/app/components/Registros/Rretenciones/Rretenciones.component.html
+++ b/src/app/components/Registros/Rretenciones/Rretenciones.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<div class="container">
+<!--Primer panel-->    
 <div class="panel panel-primary">
 <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
      <div class="panel-body">
@@ -6,21 +7,18 @@
         <form>
 
                 <div class="form-group col-lg-4">  
-                <div class="col-lg-5">
+                <div class="col-lg-2">
                     <font>
                         Folio
                     </font>
                 </div>
                 <div class="col-sm-7">  
                     <input type="text" name="busc" class="form-comtrol" placeholder="Folio de retencion">
-                    
                 </div>
                 </div>
-
                 <div>
                     <button class="btn btn-success" type="button" value="">Buscar</button>
-                </div>
-                                       
+                </div>                   
         </form>
 
         <br>
@@ -142,12 +140,6 @@
 
 &nbsp;
 &nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-
             <div class="b">
                 
             <div>
@@ -168,10 +160,6 @@
             </div>
             </div>
                 
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
                 &nbsp;
                 &nbsp;
 
@@ -260,10 +248,6 @@
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
 
             <div class="b">
 
@@ -278,10 +262,7 @@
             &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
+        
 
             <div class="b">
                 <div class="">
@@ -322,4 +303,5 @@
  </div>
  </div>
  </div>
- 
+
+ pedro
