--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,146 +1,155 @@
-<div class="container">
+<!--<div class="container">
 
+  <div class="container sinpadding">
   <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Sign In</h5>
-            <form class="form-signin">
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-              </div>
+        <div>
+            <img src="https://dl.dropboxusercontent.com/s/sp10cskms62vew9/Captura%20de%20pantalla%20de%202018-10-01%2016-51-01.png?dl=0" 
+            class="img-responsive img-thumbnail" id="image">
+          </div>
 
-              <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-              </div>
-
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember password</label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-              <a routerLink="principal">entrar</a>
-              <hr class="my-4">
-            </form>
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <form class="form-signin">
+                <div class="form-label-group">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                </div>
+  
+                <div class="form-label-group">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                </div>
+  
+                <div class="custom-control custom-checkbox mb-3">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">Remember password</label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                <a routerLink="principal">entrar</a>
+                <hr class="my-4">
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      </div>
+  
+      <div>
+      <div class="col-lg-12">
+        <div class="row">
+          <div class="col-lg-1">
+          </div>
+  
+          <div class="col-lg-10">
+             <img src="https://www.siigo.com/wp-content/uploads/2018/02/Facturaci%C3%B3n-electronica-DIAN.jpg"
+             class="img-responsive img-thumbnail">
+          </div>
 
-    <style>
-    :root {
-  --input-padding-x: 1.5rem;
-  --input-padding-y: .75rem;
-}
+          <div class="col-lg-1">
+  
+          </div>
+        </div>
+      </div>
+      </div>
+  
+      <footer>
+        <div class="col-lg-12">
+          <div class="row">
+           <div class="col-lg-1 col-md-1 col-sm-1">
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">Inicio</a> <p>
+              <i class="fas fa-external-link-alt r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">¿Quienes somos?</a> <p>
+              <i class="fas fa-desktop r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-8" id="icon">
+             <a routerLink="" class="i">Nosotros</a> <p>
+              <i class="fas fa-briefcase r" ></i>
+           </div>
+  
+           <div class="col-lg-2 col-md-2 col-sm-2" id="icon">
+             <a routerLink="" class="i">Servicios</a> <p>
+              <i class="fas fa-copy r"></i>
+           </div>
+  
+           <div class="col-lg-2 col-lg-2 col-sm-2 col-xs-4" id="icon">
+             <a routerLink="" class="i">Contacto</a> <p>
+              <i class="far fa-address-book r"></i>
+           </div>
+  
+           <div class="col-lg-1 col-md-1 col-sm-1">
+           </div>
+          </div>
+        </div>
+      </footer>
+  </div>-->
 
-body {
-  background: #9CECFB;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light" style="background:#336666" type="navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-.card-signin {
-  border: 0;
-  border-radius: 1rem;
-  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-}
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a routerLink="login" id="icon" class="nav-link" href="#" >
+              <span id="pru" class="glyphicon glyphicon-home"></span>
+              <br>
+              Panel principal
+              </a>
+            </li>
 
-.card-signin .card-title {
-  margin-bottom: 2rem;
-  font-weight: 300;
-  font-size: 1.5rem;
-}
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="icon">
+              <span id="pru" class="glyphicon glyphicon-file"></span>
+              <br>
+              Registro de CFDI 3.3
+              </a>
+            </li>
 
-.card-signin .card-body {
-  padding: 2rem;
-}
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="icon">
+              <span id="pru" class="glyphicon glyphicon-file"></span>
+              <br>
+              Generar CFDI 3.3
+              </a>
+            </li>
 
-.form-signin {
-  width: 100%;
-}
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="icon">
+                <span id="pru" class="glyphicon glyphicon-plus"></span>
+                <br>
+                Mas
+                </a>
+            </li>
 
-.form-signin .btn {
-  font-size: 80%;
-  border-radius: 5rem;
-  letter-spacing: .1rem;
-  font-weight: bold;
-  padding: 1rem;
-  transition: all 0.2s;
-}
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="icon">
+                <span id="pru" class="glyphicon glyphicon-comment"></span>
+                <br>
+                Ayuda
+                </a>
+            </li>
 
-.form-label-group {
-  position: relative;
-  margin-bottom: 1rem;
-}
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="icon">
+                <span id="pru" class="glyphicon glyphicon-lock glyphicon">
+                </span>
+                <br>
+                Cerrar sesión
+                </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-.form-label-group input {
-  border-radius: 2rem;
-}
+      </div>
 
-.form-label-group>input,
-.form-label-group>label {
-  padding: var(--input-padding-y) var(--input-padding-x);
-}
-
-.form-label-group>label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0;
-  /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::placeholder {
-  color: transparent;
-}
-
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-  padding-bottom: calc(var(--input-padding-y) / 3);
-}
-
-.form-label-group input:not(:placeholder-shown)~label {
-  padding-top: calc(var(--input-padding-y) / 3);
-  padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 12px;
-  color: #777;
-}
-
-.btn-google {
-  color: white;
-  background-color: #ea4335;
-}
-
-.btn-facebook {
-  color: white;
-  background-color: #3b5998;
-}
-    </style>
-
-</div>
+<router-outlet></router-outlet>
