--- a/src/app/dashboard-widget/gcfdi33/gcfdi33.component.html
+++ b/src/app/dashboard-widget/gcfdi33/gcfdi33.component.html
@@ -1,3 +1,5 @@
+<div><h1>Generar CFDI33</h1></div>
+
 <div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading" id="panels">Emisor</div>
