--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
 	        
 	        <div>
 	        	<mat-card-actions>
-	            	<button mat-button full>Login</button>
+	            	<button mat-button full href="dashboard">Login</button>
 	        	</mat-card-actions>
 	        </div>
 	        
